# url-shortner-rust

./: .gitignore  Cargo.toml  README.md
migrations/: 20241221_001_initial.sql
src/: lib.rs  main.rs
src/api/: extractors.rs  middleware.rs  mod.rs
src/api/handlers/: auth.rs  health.rs  mod.rs  stats.rs  url.rs  user.rs
src/config/: mod.rs
src/database/: mod.rs  repository.rs
src/error/: mod.rs
src/models/: dto.rs  mod.rs  url.rs  user.rs
src/services/: auth_service.rs  mod.rs  url_service.rs
src/utils/: mod.rs
tests/: integration_tests.rs
