[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A URL shortener service demonstrating Rust backend concepts"
license = "MIT"
repository = "https://github.com/yourusername/url-shortener"
readme = "README.md"
keywords = ["url-shortener", "web", "api", "rust"]
categories = ["web-programming"]

# این بخش برای مستندسازی پکیج استفاده میشه
# در Rust، metadata پروژه در Cargo.toml تعریف میشه

[dependencies]
# فریمورک وب - سبک و سریع
axum = { version = "0.7", features = ["macros"] }

# Runtime غیرهمزمان (async) - قلب اپلیکیشن‌های async
tokio = { version = "1", features = ["full"] }

# سریالایز/دسریالایز JSON و فرمت‌های دیگه
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# کتابخانه دیتابیس با پشتیبانی async و compile-time checking
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }

# مدیریت خطاها با derive macro
thiserror = "1"
anyhow = "1"

# لاگینگ و ردیابی - structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Middleware و utilities برای tower (زیرساخت axum)
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "compression-gzip"] }

# مدیریت تنظیمات از فایل و محیط
config = "0.14"
dotenvy = "0.15"

# تولید ID‌های یکتا و کوتاه
nanoid = "0.4"
base62 = "2"

# اعتبارسنجی داده‌ها
validator = { version = "0.18", features = ["derive"] }

# کار با URL‌ها
url = "2"

# زمان و تاریخ
chrono = { version = "0.4", features = ["serde"] }

# تولید اعداد تصادفی
rand = "0.8"

# برای async traits (قبل از Rust 1.75)
async-trait = "0.1"

# برای once_cell و lazy initialization
once_cell = "1"

# Rate limiting
governor = "0.6"

# Password hashing (برای بخش احراز هویت)
argon2 = "0.5"

# JWT tokens
jsonwebtoken = "9"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Regular expressions
regex = "1"

[dev-dependencies]
# تست‌های async
tokio-test = "0.4"

# HTTP client برای تست‌های integration
reqwest = { version = "0.11", features = ["json"] }

# Property-based testing
proptest = "1"

# Mocking
mockall = "0.12"

# تست assertions بهتر  
pretty_assertions = "1"

# تست coverage
# cargo install cargo-tarpaulin

[profile.release]
# بهینه‌سازی‌ها برای production
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# سرعت کامپایل در development
opt-level = 0
debug = true

# این بخش برای مستندسازی features پروژه استفاده میشه
[features]
default = []
# می‌تونید features اختیاری اضافه کنید
# مثلا: postgres = ["sqlx/postgres"]

